--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@cashfreepayments/cashfree-sdk": "^0.1.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/crypto-js": "^4.2.1",
     "@types/react-redux": "^7.1.29",
@@ -28,7 +29,7 @@
     "heroicons": "^2.1.1",
     "lottie-react": "^2.4.0",
     "moment": "^2.29.4",
-    "next": "14.0.1",
+    "next": "^14.1.0",
     "notiflix": "^3.2.7",
     "react": "^18",
     "react-calendar-icon": "^0.10.0",
