--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-redux": "^7.1.29",
     "axios": "^1.6.0",
     "cashfree-sdk": "^0.1.1",
+    "clsx": "^2.1.0",
     "cookie": "^0.6.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
