--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@types/crypto-js": "^4.2.1",
+    "@types/mixpanel-browser": "^2.49.0",
     "@types/react-redux": "^7.1.29",
     "axios": "^1.6.0",
     "cashfree-sdk": "^0.1.1",
@@ -29,6 +30,7 @@
     "framer-motion": "^10.16.12",
     "heroicons": "^2.1.1",
     "lottie-react": "^2.4.0",
+    "mixpanel-browser": "^2.49.0",
     "moment": "^2.29.4",
     "next": "^14.1.0",
     "notiflix": "^3.2.7",
