--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.1.1",
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@sanity/client": "^6.15.7",
     "@types/crypto-js": "^4.2.1",
     "@types/mixpanel-browser": "^2.49.0",
     "@types/react-redux": "^7.1.29",
@@ -46,6 +47,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-native-swiper": "^1.6.0",
     "react-otp-input": "^3.1.1",
+    "react-portable-text": "^0.6.0",
     "react-redux": "^8.1.3",
     "react-simple-image-slider": "^2.4.1",
     "react-spring": "^9.7.3",
@@ -57,7 +59,7 @@
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
-    "@types/node": "^20",
+    "@types/node": "^20.11.30",
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^4.19.4",
@@ -68,6 +70,6 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
