--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-intersection-observer": "^9.5.3",
     "react-native-swiper": "^1.6.0",
     "react-otp-input": "^3.1.1",
+    "react-player": "^2.16.0",
     "react-portable-text": "^0.6.0",
     "react-redux": "^8.1.3",
     "react-simple-image-slider": "^2.4.1",
