--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^6.15.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/crypto-js": "^4.2.1",
     "@types/mixpanel-browser": "^2.49.0",
     "@types/react-redux": "^7.1.29",
@@ -56,6 +57,7 @@
     "redux-persist": "^6.0.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.3",
+    "typography": "^0.16.24",
     "yup": "^1.3.2"
   },
   "devDependencies": {
