--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/client": "^6.15.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/crypto-js": "^4.2.1",
     "@types/mixpanel-browser": "^2.49.0",
     "@types/react-redux": "^7.1.29",
