--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.5",
     "framer-motion": "^10.16.12",
     "heroicons": "^2.1.1",
+    "js-file-download": "^0.4.12",
     "lottie-react": "^2.4.0",
     "mixpanel-browser": "^2.49.0",
     "next": "^14.1.0",
