--- a/package.json
+++ b/package.json
@@ -11,46 +11,37 @@
   },
   "dependencies": {
     "@cashfreepayments/cashfree-js": "^1.0.4",
-    "@cashfreepayments/cashfree-sdk": "^0.1.7",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.15.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/crypto-js": "^4.2.1",
     "@types/mixpanel-browser": "^2.49.0",
     "@types/react-redux": "^7.1.29",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.0",
-    "cashfree-sdk": "^0.1.1",
     "clsx": "^2.1.0",
-    "cookie": "^0.6.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
-    "dotenv": "^16.4.1",
     "formik": "^2.4.5",
     "framer-motion": "^10.16.12",
-    "heroicons": "^2.1.1",
     "js-file-download": "^0.4.12",
     "lottie-react": "^2.4.0",
     "mixpanel-browser": "^2.49.0",
     "next": "^14.1.0",
     "notiflix": "^3.2.7",
+    "postcss": "^8.4.38",
     "react": "^18",
-    "react-calendar-icon": "^0.10.0",
-    "react-confetti": "^6.1.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.25.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^2.0.4",
     "react-icons": "^4.12.0",
-    "react-intersection-observer": "^9.5.3",
-    "react-native-swiper": "^1.6.0",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
-    "react-portable-text": "^0.6.0",
     "react-redux": "^8.1.3",
     "react-simple-image-slider": "^2.4.1",
     "react-spring": "^9.7.3",
@@ -61,18 +52,12 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/cookie": "^0.6.0",
-    "@types/node": "^20.11.30",
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18",
-    "@types/react-helmet": "^6.1.11",
-    "@types/react-slick": "^0.23.12",
     "@types/react-transition-group": "^4.4.10",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.4.3"
+    "typescript": "5.4.5"
   }
 }
