--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "prod": "next build && next start -p 3001"
+    "prod": "next build && next start -p 3001",
+    "build:analyze": "cross-env ANALYZE=true ANALYZER_PORT=8889 npm run build"
   },
   "dependencies": {
     "@cashfreepayments/cashfree-js": "^1.0.4",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "@next/bundle-analyzer": "^14.2.4",
     "@next/third-parties": "^14.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@sanity/block-content-to-react": "^3.0.0",
@@ -48,16 +48,19 @@
     "react-spring": "^9.7.3",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.4",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.4",
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18",
     "@types/react-transition-group": "^4.4.10",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^3.3.0",
     "typescript": "5.4.5"
   }
