--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "js-file-download": "^0.4.12",
     "lottie-react": "^2.4.0",
     "mixpanel-browser": "^2.49.0",
+    "moment": "^2.30.1",
     "next": "^14.1.0",
     "notiflix": "^3.2.7",
     "postcss": "^8.4.38",
