--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-redux": "^8.1.3",
     "react-simple-image-slider": "^2.4.1",
     "react-spring": "^9.7.3",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "sharp": "^0.33.4",
