--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.2.4",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-datepicker": "^4.19.4",
