--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-datepicker": "^4.25.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "react-otp-input": "^3.1.1",
     "react-player": "^2.16.0",
