--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@next/third-parties": "^14.1.0",
+    "@portabletext/react": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.7",
-    "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^6.15.7",
+    "@sanity/image-url": "^1.0.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/crypto-js": "^4.2.1",
     "@types/mixpanel-browser": "^2.49.0",
